--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./__pycache__/*/**
-./src/__pycache__/*/**
-./venv
-./src/shopping-list/geckodriver.log
+__pycache__/
+src/__pycache__/
+venv
+src/shopping-list/geckodriver.log
